# bazel-golang

./: .gitignore  BUILD  README.MD  README.md  WORKSPACE  go.mod  status.sh
.github/workflows/: bazel.yml
cmd/a/: BUILD.bazel  main.go
cmd/b/: BUILD.bazel  main.go
cmd/c/: BUILD.bazel  main.go
logging/: BUILD.bazel  logger.go
names/: BUILD.bazel  names.go  names_test.go
version/: BUILD.bazel
