load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "names_lib",
    srcs = ["names.go"],
    importpath = "github.com/jonny7/bazel-golang/names",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pallinder_go_randomdata//:go-randomdata"],
)

go_test(
    name = "names_test",
    srcs = ["names_test.go"],
    embed = [":names_lib"],
)
